# jupiter_faq_chatbot

./: .env.example  README.md  create_evaluation_notebook.py  pyproject.toml  requirements.txt  run_pipeline.py
app/: main.py
data/: embeddings.pkl  processed_faqs.json  raw_faqs.json
demo/: streamlit_app.py
notebooks/: evaluation.ipynb
src/: bot.py  embeddings.py  preprocessor.py  scraper.py  utils.py
